--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>I'm an automotive photographer passionate about capturing the essence of stunning vehicles. Through my lens, I bring cars to life with dynamic compositions and breathtaking angles.</p>
+        <p>With a deep appreciation for automotive design and engineering, I combine my technical expertise with a creative eye to deliver striking visuals that showcase the unique character of every vehicle. Whether it’s a fast-paced action shot, a detailed close-up, or a cinematic video sequence, my goal is to create content that resonates with car enthusiasts and brands alike.</p>
+        <br>
+        <p>My work is driven by the belief that every vehicle has a story to tell—and I love to capture that story in a way that engages and excites the audience. I bring a fresh, dynamic approach to automotive photography and videography.</p>
     </section>
 
     <!-- Gallery Section -->
@@ -50,7 +52,7 @@
             <div class="photo-item" data-title="Image 3">
                 <img src="4.jpg" alt="Car Photo 3">
             </div>
-            <div class="photo-item" data-title="Image 4">
+            <div class="photo-item" data-title="Saurav">
                 <img src="5.jpg" alt="Car Photo 4">
             </div>
             <div class="photo-item" data-title="Image 5">
@@ -74,5 +76,6 @@
         <p>&copy; 2025 Adithya Nair. All rights reserved.</p>
     </footer>
 
+    <script src="adijs.js"></script>
 </body>
 </html>
