--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="photo-item"><img src="6.jpg" alt="Photo 5"><div class="alt-text">Photo 5</div></div>
                 <div class="photo-item"><img src="7.jpg" alt="Photo 6"><div class="alt-text">Photo 6</div></div>
                 <div class="photo-item"><img src="8.jpg" alt="Photo 7"><div class="alt-text">Photo 7</div></div>
-                <div class="photo-item tall"><img src="23.jpg" alt="Photo 8"><div class="alt-text">Photo 8</div></div>
+                <div class="photo-item tall"><img src="23.png" alt="Photo 8"><div class="alt-text">Photo 8</div></div>
                 <div class="photo-item"><img src="10.jpg" alt="Photo 9"><div class="alt-text">Photo 9</div></div>
                 <div class="photo-item"><img src="11.jpg" alt="Photo 10"><div class="alt-text">Photo 10</div></div>
                 <div class="photo-item tall"><img src="24.jpg" alt="Photo 11"><div class="alt-text">Photo 11</div></div>
