--- a/index.html
+++ b/index.html
@@ -58,30 +58,30 @@
                 <div class="photo-item tall"><img src="23.png" alt="Photo 8"><div class="alt-text">Photo 8</div></div>
                 <div class="photo-item"><img src="10.jpg" alt="Photo 9"><div class="alt-text">Photo 9</div></div>
                 <div class="photo-item"><img src="11.jpg" alt="Photo 10"><div class="alt-text">Photo 10</div></div>
-                <div class="photo-item tall"><img src="24.jpg" alt="Photo 11"><div class="alt-text">Photo 11</div></div>
+                <div class="photo-item tall"><img src="24.png" alt="Photo 11"><div class="alt-text">Photo 11</div></div>
                 <div class="photo-item"><img src="13.jpg" alt="Photo 12"><div class="alt-text">Photo 12</div></div>
                 <div class="photo-item"><img src="14.jpg" alt="Photo 13"><div class="alt-text">Photo 13</div></div>
                 <div class="photo-item"><img src="15.jpg" alt="Photo 14"><div class="alt-text">Photo 14</div></div>
                 <div class="photo-item"><img src="16.jpg" alt="Photo 15"><div class="alt-text">Photo 15</div></div>
                 <div class="photo-item"><img src="17.jpg" alt="Photo 16"><div class="alt-text">Photo 16</div></div>
                 <div class="photo-item"><img src="19.jpg" alt="Photo 17"><div class="alt-text">Photo 17</div></div>
-                <div class="photo-item tall"><img src="30.jpg" alt="Photo 18"><div class="alt-text">Photo 18</div></div>
+                <div class="photo-item tall"><img src="30.png" alt="Photo 18"><div class="alt-text">Photo 18</div></div>
                 <div class="photo-item"><img src="20.jpg" alt="Photo 19"><div class="alt-text">Photo 19</div></div>
                 <div class="photo-item"><img src="21.jpg" alt="Photo 20"><div class="alt-text">Photo 20</div></div>
-                <div class="photo-item tall"><img src="33.jpg" alt="Photo 21"><div class="alt-text">Photo 21</div></div>
+                <div class="photo-item tall"><img src="33.png" alt="Photo 21"><div class="alt-text">Photo 21</div></div>
                 <div class="photo-item"><img src="22.jpg" alt="Photo 22"><div class="alt-text">Photo 22</div></div>
                 <div class="photo-item"><img src="12.jpg" alt="Photo 23"><div class="alt-text">Photo 23</div></div>
-                <div class="photo-item"><img src="25.jpg" alt="Photo 24"><div class="alt-text">Photo 24</div></div>
+                <div class="photo-item"><img src="25.png" alt="Photo 24"><div class="alt-text">Photo 24</div></div>
                 <div class="photo-item"><img src="26.jpg" alt="Photo 25"><div class="alt-text">Photo 25</div></div>
                 <div class="photo-item"><img src="27.jpg" alt="Photo 26"><div class="alt-text">Photo 26</div></div>
-                <div class="photo-item"><img src="28.jpg" alt="Photo 27"><div class="alt-text">Photo 27</div></div>
-                <div class="photo-item tall"><img src="36.jpg" alt="Photo 28"><div class="alt-text">Photo 28</div></div>
+                <div class="photo-item"><img src="28.png" alt="Photo 27"><div class="alt-text">Photo 27</div></div>
+                <div class="photo-item tall"><img src="36.png" alt="Photo 28"><div class="alt-text">Photo 28</div></div>
                 <div class="photo-item"><img src="18.jpg" alt="Photo 29"><div class="alt-text">Photo 29</div></div>
                 <div class="photo-item"><img src="31.jpg" alt="Photo 30"><div class="alt-text">Photo 30</div></div>
-                <div class="photo-item tall"><img src="38.jpg" alt="Photo 31"><div class="alt-text">Photo 31</div></div>
+                <div class="photo-item tall"><img src="38.png" alt="Photo 31"><div class="alt-text">Photo 31</div></div>
                 <div class="photo-item"><img src="20.jpg" alt="Photo 32"><div class="alt-text">Photo 32</div></div>
-                <div class="photo-item"><img src="34.jpg" alt="Photo 33"><div class="alt-text">Photo 33</div></div>
-                <div class="photo-item"><img src="35.jpg" alt="Photo 34"><div class="alt-text">Photo 34</div></div>
+                <div class="photo-item"><img src="34.png" alt="Photo 33"><div class="alt-text">Photo 33</div></div>
+                <div class="photo-item"><img src="35.png" alt="Photo 34"><div class="alt-text">Photo 34</div></div>
                 <div class="photo-item"><img src="27.jpg" alt="Photo 35"><div class="alt-text">Photo 35</div></div>
             </div>
         </div>
