--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:nairadithya@gmail.com">nairadithya@gmail.com</a></p>
+        <p>Email: <a href="mailto:nairadithya959@gmail.com">nairadithya959@gmail.com</a></p>
         <p>Instagram: <a href="https://instagram.com/373.media" target="_blank">@373.media</a></p>
     </section>
 
