--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Adithya Nair. All rights reserved.</p>
+        <p>&copy; Designed and Developed by Aryan Pawaskar. All rights reserved.</p>
     </footer>
 
 
