--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                 <div class="photo-item"><img src="18.jpg" alt="Photo 29"><div class="alt-text">Photo 29</div></div>
                 <div class="photo-item"><img src="31.jpg" alt="Photo 30"><div class="alt-text">Photo 30</div></div>
                 <div class="photo-item tall"><img src="38.png" alt="Photo 31"><div class="alt-text">Photo 31</div></div>
-                <div class="photo-item"><img src="20.jpg" alt="Photo 32"><div class="alt-text">Photo 32</div></div>
+                <div class="photo-item"><img src="9.png" alt="Photo 32"><div class="alt-text">Photo 32</div></div>
                 <div class="photo-item"><img src="34.png" alt="Photo 33"><div class="alt-text">Photo 33</div></div>
                 <div class="photo-item"><img src="35.png" alt="Photo 34"><div class="alt-text">Photo 34</div></div>
-                <div class="photo-item"><img src="27.jpg" alt="Photo 35"><div class="alt-text">Photo 35</div></div>
+                <div class="photo-item"><img src="39.jpg" alt="Photo 35"><div class="alt-text">Photo 35</div></div>
             </div>
         </div>
         <div id="video-section" class="gallery-section hidden">
